--- a/.vscode/calculator.css
+++ b/.vscode/calculator.css
@@ -1,6 +1,21 @@
+*,*::after,*::before{
+    padding:0;
+    margin:0;
+    box-sizing:border-box;
+}
 html,body{
     height:100%;
     width:100%;
+   
+}
+.container{
+    background-image: url('https://img.freepik.com/free-photo/painting-mountain-lake-with-mountain-background_188544-9126.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 .button{
     width: 66px;
